[package]
name = "commander"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "commander"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
colored = "2"
crossterm = "0.28"
